handle generating consts and new edges for inverse assoc edges

--- a/cmd/gent/templates/node.tmpl
+++ b/cmd/gent/templates/node.tmpl
@@ -15,11 +15,11 @@ import (
 {{end -}}
 
 {{with .NodeData -}}
-{{with .ConstantGroups -}}
+{{with .GetSortedConstantGroups -}}
 const (
   {{ range . -}}
     {{$constType := .ConstType -}}
-    {{range .Constants -}}
+    {{range .GetSortedConstants -}}
       // {{.Comment}}
       {{.ConstName}} {{$constType}} = {{.ConstValue}}
     {{end}}
