first set of graphql changes to support nodes/edges. long way to go but...

--- a/cmd/gent/templates/graphql/graphql_schema.tmpl
+++ b/cmd/gent/templates/graphql/graphql_schema.tmpl
@@ -2,12 +2,12 @@
 
 {{ with sortedTypes . -}}
 {{- range .}}
-{{ .Type}} {{.TypeName}} {
+{{ .OpeningSchemaLine}}
   {{- with .SchemaLines -}}
     {{- range .}}
     {{.}}
     {{- end -}}
-    {{- end}}
+  {{- end}}
 }
 {{ end -}}
 {{end }}
