--- a/cmd/gent/templates/node.tmpl
+++ b/cmd/gent/templates/node.tmpl
@@ -11,6 +11,7 @@ import (
 	"github.com/google/uuid"
 
   "github.com/lolopinto/ent/ent"
+  "github.com/lolopinto/ent/ent/cast"
   "github.com/lolopinto/ent/ent/viewer"
 
   {{.PathToConfigs}}
@@ -253,21 +254,20 @@ func GenLoad{{.Node}}(viewer viewer.ViewerContext, id string, chan{{.NodeResult}
 
 func ({{$currentNodeInstance}} *{{$currentNode}}) FillFromMap(data map[string]interface{}) error {
 	for k, v := range data {
+    var err error
 		switch k {
       case "id":
-      id := uuid.UUID{}
-			if err := id.Scan(v); err != nil {
-				return err
-			}
-      {{$currentNodeInstance}}.ID = id.String()
+      {{$currentNodeInstance}}.ID, err = cast.ToUUIDString(v)
+      if err != nil {
+        return err
+      }
 			break
       {{ range $field := .FieldInfo.Fields -}} 
         {{if topLevelStructField $field -}}
           case "{{$field.GetDbColName}}": 
-            var ok bool
-            {{$currentNodeInstance}}.{{$field.FieldName}}, ok = v.({{fTypeString $field}})
-            if !ok {
-              return errors.New("could not convert {{$field.FieldName}} field to appropriate type")
+            {{$currentNodeInstance}}.{{$field.FieldName}}, err = {{$field.GetCastToMethod}}(v)
+            if err != nil {
+              return err
             }
             break
         {{end -}}
