change db_schema to generate edges in schema.py file that the python script reads

--- a/cmd/gent/templates/db_schema.tmpl
+++ b/cmd/gent/templates/db_schema.tmpl
@@ -15,7 +15,19 @@ sa.Table({{- .TableName}}, metadata,
     {{- end }}
 )
   {{ end -}}
-{{end}}
+{{- end}}
+
+edges = {
+  'public': {
+{{- with .Edges -}}
+  {{- range .}}
+    '{{.EdgeName}}': {{.EdgeLine}},
+  {{- end}}
+{{- end}}
+  }
+}
+
+metadata.info.setdefault("edges", edges)
 
 def get_metadata():
   return metadata
