--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -18,6 +18,8 @@
 
 type {{$actionName}} struct {
   {{$embeddedActionType}}
+  builder *actions.EntMutationBuilder
+  {{$nodeInfo.NodeInstance}} models.{{$nodeInfo.Node}}
 }
 
 {{$actionMethodName := actionMethodName $action}}
@@ -33,13 +35,28 @@ func {{$actionMethodName}}FromContext( {{actionMethodContextArgs $action}}) *{{$
 
 // {{$actionMethodName}} is the factory method to get an ...
 func {{$actionMethodName}}( {{actionMethodArgs $action}}) *{{$actionName}} {
-  action := &{{$actionName}}{}
-  action.Viewer = viewer
-  action.EntConfig = {{$nodeInfo.EntConfig}}
-  {{ if $action.MutatingExistingObject -}}
-  action.Ent = {{$nodeInfo.NodeInstance}}
-  {{ end -}}
-  return action
+  return &{{$actionName}}{
+    builder: &actions.EntMutationBuilder{
+      Viewer: viewer,
+      EntConfig: {{$nodeInfo.EntConfig}},
+      Operation: {{writeOperation $action}},
+      {{ if $action.MutatingExistingObject -}}
+        ExistingEntity: {{$nodeInfo.NodeInstance}},
+      {{ end -}}
+    },
+  }
+}
+
+func (action *{{$actionName}}) GetViewer() viewer.ViewerContext {
+  return action.builder.GetViewer()
+}
+
+func (action *{{$actionName}}) GetChangeset() (ent.Changeset, error) {
+  return action.builder.GetChangeset(action.Entity())
+}
+
+func (action *{{$actionName}}) Entity() ent.Entity {
+  return &action.{{$nodeInfo.NodeInstance}}
 }
 
 {{$fields := fields $action}}
@@ -47,7 +64,7 @@ func {{$actionMethodName}}( {{actionMethodArgs $action}}) *{{$actionName}} {
 {{ range $field := $fields -}}
 // {{$field.MethodName}} sets the {{$field.FieldName}} while editing the {{$nodeInfo.Node}} ent 
 func (action *{{$actionName}}) {{$field.MethodName}}({{$field.InstanceName}} {{$field.InstanceType}}) *{{$actionName}} {
-  action.SetField({{$field.QuotedFieldName}}, {{$field.InstanceName}})
+  action.builder.SetField({{$field.QuotedFieldName}}, {{$field.InstanceName}})
   {{$inverseEdge := $field.InverseEdge -}}
    {{ if $inverseEdge -}}
     {{$edgeNodeInfo := $inverseEdge.NodeInfo -}}
@@ -80,14 +97,22 @@ func (action *{{$actionName}}) {{$field.MethodName}}({{$field.InstanceName}} {{$
 // {{$edge.MethodName}} adds an instance of {{$edge.Node}} to the {{$edge.EdgeName}} edge while editing the {{$nodeInfo.Node}} ent 
 func (action *{{$actionName}}) {{$edge.MethodName}}({{$edge.InstanceName}} {{$edge.InstanceType}}) *{{$actionName}} {
     {{/* TODO time and data support later */ -}}  
-  action.AddOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}.ID, models.{{$edge.NodeType}})
+  {{ if removeEdgeAction $action -}}
+    action.builder.RemoveOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}.ID, models.{{$edge.NodeType}})
+  {{else -}}
+    action.builder.AddOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}.ID, models.{{$edge.NodeType}})
+  {{end -}}
   return action
 }
 
 // {{$edge.MethodName}} adds an instance of {{$edge.Node}}Id to the {{$edge.EdgeName}} edge while editing the {{$nodeInfo.Node}} ent 
 func (action *{{$actionName}}) {{$edge.MethodName}}ID({{$edge.InstanceName}}ID string) *{{$actionName}} {
   {{/* TODO time and data support later */ -}}  
-  action.AddOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}ID, models.{{$edge.NodeType}})
+  {{ if removeEdgeAction $action -}}
+    action.builder.RemoveOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}ID, models.{{$edge.NodeType}})
+  {{ else -}}
+    action.builder.AddOutboundEdge(models.{{$edge.EdgeConst}}, {{$edge.InstanceName}}ID, models.{{$edge.NodeType}})
+  {{end -}}
   return action
 }
 {{end -}}
@@ -108,23 +133,21 @@ func (action *{{$actionName}}) GetFieldMap() ent.ActionFieldMap {
 
 // Save is the method called to execute this action and save change
 func (action * {{$actionName}}) Save() {{saveActionType $action}} {
-  {{ if returnsObjectInstance $action -}}
-    var {{$nodeInfo.NodeInstance}} models.{{$nodeInfo.Node}}
-    {{ if edgeGroupAction $action -}}
-      {{ range $field := $nonEntFields -}} 
-        {{ if $field.IsStatusEnum -}}
-          action.SetStatusMap({{$nodeInfo.NodeInstance}}.Viewer{{$field.FieldName}}Map())
-        {{end -}}
+  {{ if edgeGroupAction $action -}}
+    {{ range $field := $nonEntFields -}} 
+      {{ if $field.IsStatusEnum -}}
+        action.SetStatusMap({{$nodeInfo.NodeInstance}}.Viewer{{$field.FieldName}}Map())
       {{end -}}
     {{end -}}
-    err := action.SaveAction(&{{$nodeInfo.NodeInstance}}, action.GetFieldMap())
-    return &{{$nodeInfo.NodeInstance}}, err
+  {{end -}}
+
+  {{ if returnsObjectInstance $action -}}
+    err := actions.Save(action)
+    return &action.{{$nodeInfo.NodeInstance}}, err
   {{else -}}
-    return action.SaveAction()
+    return actions.Save(action)
   {{end -}}
 }
 
-{{ if returnsObjectInstance $action -}}
-var _ actions.ActionMutator = &{{$actionName}}{}
-{{end -}}
+var _ actions.Action = &{{$actionName}}{}
 
