add Validate() method to action which does the bare minimum of checking that required fields are set in create mutations
it's relaxed from previous way of doing it because you should be able to edit an action by just providing one or two new fields

--- a/cmd/gent/templates/action.tmpl
+++ b/cmd/gent/templates/action.tmpl
@@ -124,16 +124,25 @@ func (action *{{$actionName}}) {{$edge.MethodName}}ID({{$edge.InstanceName}}ID s
 {{end -}}
 
 
-// GetFields returns the fields that could be edited in this mutation
-func (action *{{$actionName}}) GetFieldMap() ent.ActionFieldMap {
+// getFieldMap returns the fields that could be edited in this mutation
+func (action *{{$actionName}}) getFieldMap() ent.ActionFieldMap {
+  {{/* TODO ActionFieldMap and MutatingFieldInfo should not be public in ent anymore? */ -}}
   return ent.ActionFieldMap {
     {{ range $field := $fields -}}
       {{$field.QuotedFieldName}}: &ent.MutatingFieldInfo {
         DB: {{$field.QuotedDBName}},
-        Required: true,
+        {{ if createAction $action -}}
+          Required: true,
+        {{ else -}}
+          Required: false,
+        {{end -}}
       },
     {{end -}}
   }
+}
+
+func (action *{{$actionName}}) Validate() error {
+  return action.builder.ValidateFieldMap(action.getFieldMap())
 }
 
 
